--- a/public/2Q1GNaAyuyao.html
+++ b/public/2Q1GNaAyuyao.html
@@ -6,6 +6,9 @@
         h1 {
             color: #8A8269;
         }
+         h2 {
+            color: #8A8269;
+        }
         table {
             background-color: #FFFFED;
             color: #706A58;
@@ -15,6 +18,8 @@
                 border: 1px solid #4A463C;
     }
     </style>
+    <li style=" color: #8A8269;"><a href="https://thischronomiaclock.github.io/CS3_1stQtrPortfolio/public/activity.html">Thursday Sched (By Aldix, Navarro)</a></li>
+    <h2>Check out other scheds?? Click the ones above!</h2>
     <h1>Friday</h1>
     <body>
     <table>
@@ -75,7 +80,7 @@
     </table>
     <br>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/3zCXKQ4ggrA?si=tbGsZPo1q9EsOFer" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        <img width="516" src="https://tse2.mm.bing.net/th/id/OIP.OuI1RKt8wT0Z772_u7ZHVwHaFj?rs=1&pid=ImgDetMain&o=7&rm=3">
+        <img width="560" height="315" src="https://tse2.mm.bing.net/th/id/OIP.OuI1RKt8wT0Z772_u7ZHVwHaFj?rs=1&pid=ImgDetMain&o=7&rm=3">
     <br>
     <p style="color: #8A8269;"> The reason I picked these files are because Friday is the last weekday which entails a long (sort of) break afterwards. Due to me looking forward to that, I tend to get
         sleepier on this day. Especially during chem. After PE is where I get even more sleepy, since well, activities. A lot.
