--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    <h1 style="font-family: Arial; color:#a1a880">2nd Qtr : Links to Jesh's works</h1>
    <nav>
     <ul>
-      <li style="font-family: Arial; color:#a1a880"><a href="./public/2G1GNaAyuyao.html"> First Exercise . . . ! </a> </li>
+      <li style="font-family: Arial; color:#a1a880"><a href="./public/2Q1GNaAyuyao.html"> First Exercise . . . ! </a> </li>
 </li> 
     </ul>
    </nav>
