--- a/public/2Q1GNaAyuyao.html
+++ b/public/2Q1GNaAyuyao.html
@@ -56,7 +56,7 @@
         </tr>
         <tr>
             <td> 12:10 - 1:05 </td>
-            <td> Lunch... zzz </td>
+            <td> Lunch... zzzz </td>
         </tr>
         <tr>
             <td> 1:05 - 1:50 </td>
