--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <section class="w3-container">
-   <h1 style="font-family: Arial; color:#a1a880">2nd Qtr : Links to Jesh's works</h1>
+   <h1 style="font-family: Arial; color:#a1a880">2nd Qtr : Links to Jesh's works !</h1>
    <nav>
     <ul>
       <li style="font-family: Arial; color:#a1a880"><a href="./public/2Q1GNaAyuyao.html"> First Exercise . . . ! </a> </li>
