--- a/public/2Q1GNaAyuyao.html
+++ b/public/2Q1GNaAyuyao.html
@@ -5,31 +5,63 @@
         }
         h1 {
             color: #8A8269;
+            margin-left: auto;
+            margin-right: auto;
         }
          h2 {
             color: #8A8269;
+            font-family: 'Comic Sans MS';
+            margin-left: 46%;
+            margin-right: auto;
+        }
+        h3 {
+              color: #8A8269;
         }
         table {
             background-color: #FFFFED;
             color: #706A58;
-            text-align: center;
+            width: 50%;
+            height: 60%;
+            margin-left: auto;
+            margin-right: auto;
         }
             table, th, td {
                 border: 1px solid #4A463C;
-    }
+                border-radius: 5px;
+                text-align: center;
+                font-family: 'Comic Sans MS';
+            }
+            button {
+                border-color: white;
+                margin-left: auto;
+                margin-right: auto;
+                background-color: #FFFFED;
+                color: #4A463C;
+                width: 6%;
+                height: 20px;
+                border-radius: 5px;
+                font-family:'Comic Sans MS';
+                font-size: 80%;
+            }
     </style>
-    <li style=" color: #8A8269;"><a href="https://thischronomiaclock.github.io/CS3_1stQtrPortfolio/public/activity.html">Thursday Sched (By Aldix, Navarro)</a></li>
-    <h2>Check out other scheds?? Click the ones above!</h2>
-    <h1>Friday</h1>
+    <h1> Na06 - AYUYAO, Jesh Angela, T. </h1>
+   <a style="color:#8A8269" href="https://thischronomiaclock.github.io/CS3_1stQtrPortfolio/public/activity.html"><button>M</button></a>
+   <a style="color:#8A8269" href="https://thischronomiaclock.github.io/CS3_1stQtrPortfolio/public/activity.html"><button>Tu</button></a>
+    <a style="color:#8A8269" href="https://thischronomiaclock.github.io/CS3_1stQtrPortfolio/public/activity.html"><button>W</button></a>
+    <a style="color:#8A8269" href="https://thischronomiaclock.github.io/CS3_1stQtrPortfolio/public/activity.html"><button>T</button></a>
+    <h3>Check out other scheds?? Click the ones above!</h3>
+    <h2>Friday 𐔌՞. .՞𐦯</h2>
     <body>
     <table>
         <tr>
             <th> Time </th>
             <th> Subject </th>
+            <th> Room </th>
         </tr>
         <tr>
             <td> 7:30 - 8:15  </td>
             <td rowspan = "2"> Biology </td>
+            <td rowspan = "2"> SHB 111 </td>
         </tr>
         <tr>
             <td> 8:15 - 9:00  </td>
@@ -37,26 +69,32 @@
         <tr>
             <td> 9:00 - 9:10  </td>
             <td> Break </td>
+            <td> Anywhere / Walk </td>
         </tr> 
         <tr>
             <td> 9:10 - 9:55 </td>
             <td> Filipino </td>
+            <td> SHB 309 </td>
         </tr>
         <tr>
             <td> 9:55 - 10:40 </td>
             <td> Stat </td>
+            <td> SHB 404 </td>
         </tr>
         <tr>
             <td> 10:40 - 11:25 </td>
             <td> Study period !! </td>
+            <td> Anywhere in Campus </td>
         </tr>
         <tr>
             <td> 11:25 - 12:10 </td>
             <td> Val.Ed </td>
+            <td> SHB 309 </td>
         </tr>
         <tr>
             <td> 12:10 - 1:05 </td>
             <td> Lunch... zzzz </td>
+            <td rowspan = "2"> Anywhere in Campus </td>
         </tr>
         <tr>
             <td> 1:05 - 1:50 </td>
@@ -65,14 +103,17 @@
         <tr>
             <td> 1:50 - 2:35 </td>
             <td> Chemistry </td>
+            <td> SHB 105 </td>
         </tr>
         <tr>
             <td> 2:35 - 2:45 </td>
             <td> Break </td>
+            <td> Anywhere / Walk </td>
         </tr>
         <tr>
             <td> 2:45 - 3:30 </td>
             <td rowspan="2"> PE </td>
+            <td rowspan = "2"> Gymnasium </td>
         </tr>
         <tr>
             <td> 3:30 - 4:15 </td>
@@ -86,4 +127,7 @@
         sleepier on this day. Especially during chem. After PE is where I get even more sleepy, since well, activities. A lot.
     </p>
     </body>
+    <footer style="color: #8A8269">
+    &copy; Ayuyao, 2025
+    </footer>
 </html>
