--- a/public/2Q1GNaAyuyao.html
+++ b/public/2Q1GNaAyuyao.html
@@ -41,14 +41,14 @@
                 height: 20px;
                 border-radius: 5px;
                 font-family:'Comic Sans MS';
-                font-size: 80%;
+                font-size: 80%;  
             }
     </style>
     <h1> Na06 - AYUYAO, Jesh Angela, T. </h1>
-   <a style="color:#8A8269" href="https://thischronomiaclock.github.io/CS3_1stQtrPortfolio/public/activity.html"><button>M</button></a>
-   <a style="color:#8A8269" href="https://thischronomiaclock.github.io/CS3_1stQtrPortfolio/public/activity.html"><button>Tu</button></a>
-    <a style="color:#8A8269" href="https://thischronomiaclock.github.io/CS3_1stQtrPortfolio/public/activity.html"><button>W</button></a>
-    <a style="color:#8A8269" href="https://thischronomiaclock.github.io/CS3_1stQtrPortfolio/public/activity.html"><button>T</button></a>
+   <a style="color:#8A8269" href="no"><button>M</button></a>
+   <a style="color:#8A8269" href="no"><button>Tu</button></a>
+    <a style="color:#8A8269" href="https://judahpakingan.github.io/CS3_1stQtrPortfolio/public/Schedule.html"><button>W</button></a>
+    <a style="color:#8A8269" href="https://thischronomiaclock.github.io/CS3_1stQtrPortfolio/public/activity.html"><button>Th</button></a>
     <h3>Check out other scheds?? Click the ones above!</h3>
     <h2>Friday 𐔌՞. .՞𐦯</h2>
     <body>
@@ -126,6 +126,15 @@
     <p style="color: #8A8269;"> The reason I picked these files are because Friday is the last weekday which entails a long (sort of) break afterwards. Due to me looking forward to that, I tend to get
         sleepier on this day. Especially during chem. After PE is where I get even more sleepy, since well, activities. A lot.
     </p>
+    <p style="color: #8A8269;">
+        Groupmates:
+        <li style="color: #8A8269;">GUITIERREZm Sebastian - Monday</li>
+        <li style="color: #8A8269;">ONG, Micaella - Tuesday</li>
+        <li style="color: #8A8269;">NAVARRO, Aldixiander - Thursday</li>
+        <p style="color: #8A8269;">Non-groupmates credit: </p>
+        <li style="color: #8A8269;">PAKINGAN, Ezekiel - Wednesday </li>
+    </p>
+    <p style="color: #8A8269;">END !! </p>
     </body>
     <footer style="color: #8A8269">
     &copy; Ayuyao, 2025
