--- a/public/2Q1GNaAyuyao.html
+++ b/public/2Q1GNaAyuyao.html
@@ -103,7 +103,7 @@
         <tr>
             <td> 1:50 - 2:35 </td>
             <td> Chemistry </td>
-            <td> SHB 105 </td>
+            <td> SHB 105 / ASTB 202 </td>
         </tr>
         <tr>
             <td> 2:35 - 2:45 </td>
