--- a/public/2Q1GNaAyuyao.html
+++ b/public/2Q1GNaAyuyao.html
@@ -45,10 +45,10 @@
             }
     </style>
     <h1> Na06 - AYUYAO, Jesh Angela, T. </h1>
-   <a style="color:#8A8269" href="no"><button>M</button></a>
-   <a style="color:#8A8269" href="no"><button>Tu</button></a>
-    <a style="color:#8A8269" href="https://judahpakingan.github.io/CS3_1stQtrPortfolio/public/Schedule.html"><button>W</button></a>
-    <a style="color:#8A8269" href="https://thischronomiaclock.github.io/CS3_1stQtrPortfolio/public/activity.html"><button>Th</button></a>
+   <a style="color:#8A8269" href="no"><button>Mon</button></a>
+   <a style="color:#8A8269" href="no"><button>Tues</button></a>
+    <a style="color:#8A8269" href="https://judahpakingan.github.io/CS3_1stQtrPortfolio/public/Schedule.html"><button>Wed</button></a>
+    <a style="color:#8A8269" href="https://thischronomiaclock.github.io/CS3_1stQtrPortfolio/public/activity.html"><button>Thurs</button></a>
     <h3>Check out other scheds?? Click the ones above!</h3>
     <h2>Friday 𐔌՞. .՞𐦯</h2>
     <body>
