--- a/public/2Q1GNaAyuyao.html
+++ b/public/2Q1GNaAyuyao.html
@@ -120,7 +120,7 @@
         </tr>
     </table>
     <br>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/3zCXKQ4ggrA?si=tbGsZPo1q9EsOFer" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/3zCXKQ4ggrA?si=FHEFCg88YBU3L6H5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <img width="560" height="315" src="https://tse2.mm.bing.net/th/id/OIP.OuI1RKt8wT0Z772_u7ZHVwHaFj?rs=1&pid=ImgDetMain&o=7&rm=3">
     <br>
     <p style="color: #8A8269;"> The reason I picked these files are because Friday is the last weekday which entails a long (sort of) break afterwards. Due to me looking forward to that, I tend to get
@@ -128,7 +128,7 @@
     </p>
     <p style="color: #8A8269;">
         Groupmates:
-        <li style="color: #8A8269;">GUITIERREZm Sebastian - Monday</li>
+        <li style="color: #8A8269;">GUITIERREZ, Sebastian - Monday</li>
         <li style="color: #8A8269;">ONG, Micaella - Tuesday</li>
         <li style="color: #8A8269;">NAVARRO, Aldixiander - Thursday</li>
         <p style="color: #8A8269;">Non-groupmates credit: </p>
