--- a/public/2Q1GNaAyuyao.html
+++ b/public/2Q1GNaAyuyao.html
@@ -132,7 +132,7 @@
         <li style="color: #8A8269;">ONG, Micaella - Tuesday</li>
         <li style="color: #8A8269;">NAVARRO, Aldixiander - Thursday</li>
         <p style="color: #8A8269;">Non-groupmates credit: </p>
-        <li style="color: #8A8269;">PAKINGAN, Ezekiel - Wednesday </li>
+        <li style="color: #8A8269;">PAKINGAN, Judah - Wednesday </li>
     </p>
     <p style="color: #8A8269;">END !! </p>
     </body>
