--- a/index.html
+++ b/index.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Jesh Ayuyao Portfolio</title>
-  <style>
-    body {
-      background-color: #292824;
-    }
-  </style>
-  <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
-</head>
-<body>
-  <section class="w3-container">
-   <h1 style="font-family: Arial; color:#a1a880">2nd Qtr : Links to Jesh's works !</h1>
-   <nav>
-    <ul>
-      <li style="font-family: Arial; color:#a1a880"><a href="./public/2Q1GNaAyuyao.html"> First Exercise . . . ! </a> </li>
-</li> 
-    </ul>
-   </nav>
-  </section>
-</body>
+  <head>
+    <title>Jesh Ayuyao Portfolio</title>
+    <style>
+      body {
+        background-color: #292824;
+      }
+    </style>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css" />
+  </head>
+  <body>
+    <section class="w3-container">
+      <h1 style="font-family: Arial; color: #a1a880">
+        2nd Qtr : Links to Jesh's works !
+      </h1>
+      <nav>
+        <ul>
+          <li style="font-family: Arial; color: #a1a880">
+            <a href="./public/2Q1GNaAyuyao.html"> First Exercise . . . ! </a>
+          </li>
+        </ul>
+      </nav>
+    </section>
+  </body>
 </html>
