--- a/public/2Q1GNaAyuyao.html
+++ b/public/2Q1GNaAyuyao.html
@@ -43,12 +43,25 @@
                 font-family:'Comic Sans MS';
                 font-size: 80%;  
             }
+            a {
+                color:#8A8269;
+                text-decoration: none;
+                font-family:'Comic Sans MS';
+            }
+            a:hover {
+                color:#676254;
+                text-decoration: underline;
+            }
+            li {
+                color:#666154;
+                
+            }
     </style>
     <h1> Na06 - AYUYAO, Jesh Angela, T. </h1>
-   <a style="color:#8A8269" href="no"><button>Mon</button></a>
-   <a style="color:#8A8269" href="no"><button>Tues</button></a>
-    <a style="color:#8A8269" href="https://judahpakingan.github.io/CS3_1stQtrPortfolio/public/Schedule.html"><button>Wed</button></a>
-    <a style="color:#8A8269" href="https://thischronomiaclock.github.io/CS3_1stQtrPortfolio/public/activity.html"><button>Thurs</button></a>
+   <li><a href="no">Monday Sched</a></li>
+   <li><a href="no">Tuesday Sched</a></li>
+    <li><a href="https://judahpakingan.github.io/CS3_1stQtrPortfolio/public/Schedule.html">Wednesday Sched</a></li>
+    <li><a href="https://thischronomiaclock.github.io/CS3_1stQtrPortfolio/public/activity.html">Thursday Sched</a></li>
     <h3>Check out other scheds?? Click the ones above!</h3>
     <h2>Friday 𐔌՞. .՞𐦯</h2>
     <body>
