--- a/public/2Q1GNaAyuyao.html
+++ b/public/2Q1GNaAyuyao.html
@@ -1,4 +1,9 @@
 <html>
+    <html lang="en">
+    <head>
+        <title>Friday, Na06</title>
+        <meta charset="UTF-8">
+    </head>
     <style>
         body {
             background-color: beige;
