--- a/public/2Q1GNaAyuyao.html
+++ b/public/2Q1GNaAyuyao.html
@@ -58,8 +58,10 @@
                 text-decoration: underline;
             }
             li {
-                color:#666154;
-                
+                color:#8A8269;
+            }
+            p {
+                color: #968e75;
             }
     </style>
     <h1> Na06 - AYUYAO, Jesh Angela, T. </h1>
@@ -141,20 +143,20 @@
     <iframe width="560" height="315" src="https://www.youtube.com/embed/3zCXKQ4ggrA?si=FHEFCg88YBU3L6H5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <img width="560" height="315" src="https://tse2.mm.bing.net/th/id/OIP.OuI1RKt8wT0Z772_u7ZHVwHaFj?rs=1&pid=ImgDetMain&o=7&rm=3">
     <br>
-    <p style="color: #8A8269;"> The reason I picked these files are because Friday is the last weekday which entails a long (sort of) break afterwards. Due to me looking forward to that, I tend to get
+    <p> The reason I picked these files are because Friday is the last weekday which entails a long (sort of) break afterwards. Due to me looking forward to that, I tend to get
         sleepier on this day. Especially during chem. After PE is where I get even more sleepy, since well, activities. A lot.
     </p>
-    <p style="color: #8A8269;">
+    <p>
         Groupmates:
         <li style="color: #8A8269;">GUITIERREZ, Sebastian - Monday</li>
         <li style="color: #8A8269;">ONG, Micaella - Tuesday</li>
         <li style="color: #8A8269;">NAVARRO, Aldixiander - Thursday</li>
-        <p style="color: #8A8269;">Non-groupmates credit: </p>
+        <p>Non-groupmates credit: </p>
         <li style="color: #8A8269;">PAKINGAN, Judah - Wednesday </li>
     </p>
     <p style="color: #8A8269;">END !! </p>
     </body>
     <footer style="color: #8A8269">
-    &copy; Ayuyao, 2025
+    &copy; 2025, Ayuyao
     </footer>
 </html>
