--- a/public/2Q1GNaAyuyao.html
+++ b/public/2Q1GNaAyuyao.html
@@ -140,11 +140,12 @@
         </tr>
     </table>
     <br>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/3zCXKQ4ggrA?si=FHEFCg88YBU3L6H5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/3zCXKQ4ggrA?si=hmVwJVGbW4Yguqnx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <img width="560" height="315" src="https://tse2.mm.bing.net/th/id/OIP.OuI1RKt8wT0Z772_u7ZHVwHaFj?rs=1&pid=ImgDetMain&o=7&rm=3">
     <br>
     <p> The reason I picked these files are because Friday is the last weekday which entails a long (sort of) break afterwards. Due to me looking forward to that, I tend to get
         sleepier on this day. Especially during chem. After PE is where I get even more sleepy, since well, activities. A lot.
+        <!-- I love Friday schedule tho!! -->
     </p>
     <p>
         Groupmates:
