--- a/public/2Q1GNaAyuyao.html
+++ b/public/2Q1GNaAyuyao.html
@@ -66,7 +66,7 @@
     </style>
     <h1> Na06 - AYUYAO, Jesh Angela, T. </h1>
    <li><a href="no">Monday Sched</a></li>
-   <li><a href="no">Tuesday Sched</a></li>
+   <li><a href="https://micaeli7.github.io/CS3_2ndQtrPortfolio_NaOng/public/2Q1GNaOng.html">Tuesday Sched</a></li>
     <li><a href="https://judahpakingan.github.io/CS3_1stQtrPortfolio/public/Schedule.html">Wednesday Sched</a></li>
     <li><a href="https://thischronomiaclock.github.io/CS3_1stQtrPortfolio/public/activity.html">Thursday Sched</a></li>
     <h3>Check out other scheds?? Click the ones above!</h3>
