--- a/public/2Q1GNaAyuyao.html
+++ b/public/2Q1GNaAyuyao.html
@@ -3,6 +3,7 @@
     <head>
         <title>Friday, Na06</title>
         <meta charset="UTF-8">
+        <link rel="icon" href="assets/favicon-v2.png">
     </head>
     <style>
         body {
