Twenty-first Commit

--- a/public/2Q1GNaAyuyao.html
+++ b/public/2Q1GNaAyuyao.html
@@ -66,10 +66,17 @@
             }
     </style>
     <h1> Na06 - AYUYAO, Jesh Angela, T. </h1>
-   <li><a href="no">Monday Sched</a></li>
-   <li><a href="https://micaeli7.github.io/CS3_2ndQtrPortfolio_NaOng/public/2Q1GNaOng.html">Tuesday Sched</a></li>
-    <li><a href="https://judahpakingan.github.io/CS3_1stQtrPortfolio/public/Schedule.html">Wednesday Sched</a></li>
-    <li><a href="https://thischronomiaclock.github.io/CS3_1stQtrPortfolio/public/activity.html">Thursday Sched</a></li>
+      <header>
+        <nav aria-label="main navigation">
+            <li><a class="brand" href="2Q1GNaAyuyao.html">Main, Friday . . .</a></li>
+            <ul class="nav-list">
+                <li><a href="no">Monday Sched</a></li>
+                <li><a href="https://micaeli7.github.io/CS3_2ndQtrPortfolio_NaOng/public/2Q1GNaOng.html">Tuesday Sched</a></li>
+                <li><a href="https://judahpakingan.github.io/CS3_1stQtrPortfolio/public/Schedule.html">Wednesday Sched</a></li>
+                <li><a href="https://thischronomiaclock.github.io/CS3_1stQtrPortfolio/public/activity.html">Thursday Sched</a></li>
+            </ul>
+        </nav>
+    </header>
     <h3>Check out other scheds?? Click the ones above!</h3>
     <h2>Friday 𐔌՞. .՞𐦯</h2>
     <body>
