Twenty-second Commit

--- a/public/2Q1GNaAyuyao.html
+++ b/public/2Q1GNaAyuyao.html
@@ -70,7 +70,7 @@
         <nav aria-label="main navigation">
             <li><a class="brand" href="2Q1GNaAyuyao.html">Main, Friday . . .</a></li>
             <ul class="nav-list">
-                <li><a href="no">Monday Sched</a></li>
+                <li><a href="https://sebastian-hugo-gutierrez.github.io/CS3_2ndQtrPortfolio/public/2Q1GNaGutierrez.html">Monday Sched</a></li>
                 <li><a href="https://micaeli7.github.io/CS3_2ndQtrPortfolio_NaOng/public/2Q1GNaOng.html">Tuesday Sched</a></li>
                 <li><a href="https://judahpakingan.github.io/CS3_1stQtrPortfolio/public/Schedule.html">Wednesday Sched</a></li>
                 <li><a href="https://thischronomiaclock.github.io/CS3_1stQtrPortfolio/public/activity.html">Thursday Sched</a></li>
