Twenty-third Commit

--- a/index.html
+++ b/index.html
@@ -1,23 +1,35 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Jesh Ayuyao Portfolio</title>
+    <title>Jesh Ayuyao Portfolio  ࣪ ˖ 𖦹°⋆ </title>
     <style>
       body {
-        background-color: #292824;
+        background-color: #5a7869;
+        color: #404a45;
+        font-family: 'Comic Sans MS';
+      }
+      div {
+        background-color: #acbfb6;
+        border-radius: 15px;
+        margin-top: 5px;
+        padding: 5px;
+        width: fit-content;
       }
     </style>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css" />
   </head>
   <body>
     <section class="w3-container">
-      <h1 style="font-family: Arial; color: #a1a880">
-        2nd Qtr : Links to Jesh's works !
+      <div class="wrapper">
+      <h1 >
+        2nd Qtr : Links to Jesh's works .ᐟ
       </h1>
+      </div>
       <nav>
         <ul>
-          <li style="font-family: Arial; color: #a1a880">
-            <a href="./public/2Q1GNaAyuyao.html"> First Exercise . . . ! </a>
+          <li>
+            <a href="./public/2Q1GNaAyuyao.html"> First Exercise . . </a>
+            <a href="./public/Q21NGNaAyuyao.html"> First Non-Graded ⋆ </a>
           </li>
         </ul>
       </nav>
