Twenty-fourth Commit

--- a/index.html
+++ b/index.html
@@ -8,12 +8,18 @@
         color: #404a45;
         font-family: 'Comic Sans MS';
       }
+      h1 {
+         color: #404a45;
+      }
       div {
         background-color: #acbfb6;
         border-radius: 15px;
         margin-top: 5px;
         padding: 5px;
         width: fit-content;
+      }
+      li {
+        color:#acbfb6;
       }
     </style>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css" />
@@ -29,6 +35,8 @@
         <ul>
           <li>
             <a href="./public/2Q1GNaAyuyao.html"> First Exercise . . </a>
+            </li>
+          <li>
             <a href="./public/Q21NGNaAyuyao.html"> First Non-Graded ⋆ </a>
           </li>
         </ul>
