--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       h1 {
          color: #404a45;
       }
-      div {
+      .wrapper {
         background-color: #acbfb6;
         border-radius: 15px;
         margin-top: 5px;
@@ -20,6 +20,33 @@
       }
       li {
         color:#acbfb6;
+      }
+      .nav-thingy {
+        overflow: hidden;
+        background-color: #acbfb6;
+      }
+      .nav-thingy a {
+        float: left;
+        color: #5a7869;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+        font-size: 12px;
+      }
+      .nav-thingy a:hover {
+        background-color: #5e6d66;
+        color: black;
+      }
+
+      .nav-thingy a.active {
+        background-color: #404a45;
+        color: white;
+      }
+      .images > img {
+        width: 40px;
+      height: 40px;
+      margin-right: 10px;
+      float: left;
       }
     </style>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css" />
@@ -31,16 +58,17 @@
         2nd Qtr : Links to Jesh's works .ᐟ
       </h1>
       </div>
-      <nav>
-        <ul>
-          <li>
-            <a href="./public/2Q1GNaAyuyao.html"> First Exercise . . </a>
-            </li>
-          <li>
-            <a href="./public/Q21NGNaAyuyao.html"> First Non-Graded ⋆ </a>
-          </li>
-        </ul>
+      <br>
+      <div class="images">
+      <img src="assets/stars.png">
+      </div>
+      <div class="nav-thingy">
+        <nav>
+          <a class="active" href="#home">Home</a>
+          <a href="./public/2Q1GNaAyuyao.html"> First Exercise . . and Second c: </a>
+          <a href="./public/Q21NGNaAyuyao.html"> First Non-Graded ⋆ </a>
       </nav>
+      </div>
     </section>
   </body>
 </html>
