Twenty-sixth Commit

--- a/public/2Q1GNaAyuyao.html
+++ b/public/2Q1GNaAyuyao.html
@@ -7,32 +7,32 @@
     </head>
     <style>
         body {
-            background-color: beige;
+            background-color: #FFFFFF;
         }
         h1 {
-            color: #8A8269;
+            color: #7e8ea8;
             margin-left: auto;
             margin-right: auto;
         }
          h2 {
-            color: #8A8269;
+            color: #7e8ea8;
             font-family: 'Comic Sans MS';
             margin-left: 46%;
             margin-right: auto;
         }
         h3 {
-              color: #8A8269;
+              color: #7e8ea8;
         }
         table {
-            background-color: #FFFFED;
-            color: #706A58;
+            background-color: #e6ebf2;
+            color: #7e8ea8;
             width: 50%;
             height: 60%;
             margin-left: auto;
             margin-right: auto;
         }
             table, th, td {
-                border: 1px solid #4A463C;
+                border: 1px solid #5e6c83;
                 border-radius: 5px;
                 text-align: center;
                 font-family: 'Comic Sans MS';
@@ -50,33 +50,53 @@
                 font-size: 80%;  
             }
             a {
-                color:#8A8269;
+                color:#7e8ea8;
                 text-decoration: none;
                 font-family:'Comic Sans MS';
-            }
-            a:hover {
-                color:#676254;
-                text-decoration: underline;
-            }
-            li {
-                color:#8A8269;
-            }
+            }           
             p {
-                color: #968e75;
+                color: #7e8ea8;
+            }
+            .nav-thingy {
+                overflow: hidden;
+                background-color: #7b8ba2;
+                border-radius: 15px;
+            }
+            .nav-thingy a {
+                float: left;
+                color: #ffffff;
+                text-align: center;
+                padding: 10px 16px;
+                text-decoration: none;
+                font-size: 12px;
+            }
+            .nav-thingy a:hover {
+                background-color: #646e81;
+            }
+            .nav-thingy a.active {
+                background-color: #535c6c;
+                color: white;
+            }
+            header > img {
+            width: 40px;
+            height: 40px;
+            margin-right: 10px;
+            float: left;
             }
     </style>
 
     <h1> Na06 - AYUYAO, Jesh Angela, T. </h1>
       <header>
+        <img src="./star.png">
+        <div class="nav-thingy">
         <nav aria-label="main navigation">
-            <li><a class="brand" href="2Q1GNaAyuyao.html">Main, Friday . . .</a></li>
-            <ul class="nav-list">
-                <li><a href="https://sebastian-hugo-gutierrez.github.io/CS3_2ndQtrPortfolio/public/2Q1GNaGutierrez.html">Monday Sched</a></li>
-                <li><a href="https://micaeli7.github.io/CS3_2ndQtrPortfolio_NaOng/public/2Q1GNaOng.html">Tuesday Sched</a></li>
-                <li><a href="https://judahpakingan.github.io/CS3_1stQtrPortfolio/public/Schedule.html">Wednesday Sched</a></li>
-                <li><a href="https://thischronomiaclock.github.io/CS3_1stQtrPortfolio/public/activity.html">Thursday Sched</a></li>
-            </ul>
+                <a class="active" href="#home">Main, Friday . . .</a></li>
+                <a href="https://sebastian-hugo-gutierrez.github.io/CS3_2ndQtrPortfolio/public/2Q1GNaGutierrez.html">Monday Sched</a></li>
+                <a href="https://micaeli7.github.io/CS3_2ndQtrPortfolio_NaOng/public/2Q1GNaOng.html">Tuesday Sched</a></li>
+                <a href="https://judahpakingan.github.io/CS3_1stQtrPortfolio/public/Schedule.html">Wednesday Sched</a></li>
+                <a href="https://thischronomiaclock.github.io/CS3_1stQtrPortfolio/public/activity.html">Thursday Sched</a></li>
         </nav>
+        </div>
     </header>
     <h3>Check out other scheds?? Click the ones above!</h3>
     <h2>Friday 𐔌՞. .՞𐦯</h2>
@@ -158,15 +178,15 @@
     </p>
     <p>
         Groupmates:
-            <li style="color: #8A8269;">GUITIERREZ, Sebastian - Monday</li>
-            <li style="color: #8A8269;">ONG, Micaella - Tuesday</li>
-            <li style="color: #8A8269;">NAVARRO, Aldixiander - Thursday</li>
+            <li style="color: #7e8ea8;">GUITIERREZ, Sebastian - Monday</li>
+            <li style="color: #7e8ea8;">ONG, Micaella - Tuesday</li>
+            <li style="color: #7e8ea8;">NAVARRO, Aldixiander - Thursday</li>
         <p>Non-groupmates credit: </p>
-            <li style="color: #8A8269;">PAKINGAN, Judah - Wednesday </li>
+            <li style="color: #7e8ea8;">PAKINGAN, Judah - Wednesday </li>
     </p>
-    <p style="color: #8A8269;">END !! </p>
+    <p style="color: #7e8ea8;">END !! </p>
     </body>
-    <footer style="color: #8A8269">
+    <footer style="color: #7e8ea8">
     &copy; 2025, Ayuyao
     </footer>
 </html>
