--- a/public/2Q1GNaAyuyao.html
+++ b/public/2Q1GNaAyuyao.html
@@ -4,6 +4,7 @@
         <title>Friday, Na06</title>
         <meta charset="UTF-8">
         <link rel="icon" href="assets/favicon-v2.png">
+        <link rel="stylesheet" type="text/css" href="2Q2Gstylesheet.css">
     </head>
     <style>
         body {
@@ -40,7 +41,7 @@
             p {
                 color: #7e8ea8;
             }
-            .nav-thingy {
+            /* .nav-thingy {
                 overflow: hidden;
                 background-color: #7b8ba2;
                 border-radius: 15px;
@@ -60,7 +61,7 @@
             .nav-thingy a.active {
                 background-color: #535c6c;
                 color: white;
-            }
+            } */
             header > img {
             width: 40px;
             height: 40px;
