Thirty-first Commit

--- a/public/2Q1GNaAyuyao.html
+++ b/public/2Q1GNaAyuyao.html
@@ -68,6 +68,10 @@
             margin-right: 10px;
             float: left;
             }
+            footer {
+                background-color: #798aa5;
+                color:#ffffff
+            }
     </style>
 
     <h1> Na06 - AYUYAO, Jesh Angela, T. </h1>
@@ -170,7 +174,7 @@
     </p>
     <p style="color: #7e8ea8;">END !! </p>
     </body>
-    <footer style="color: #7e8ea8">
+    <footer>
     &copy; 2025, Ayuyao
     </footer>
 </html>
