--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
           <a class="active" href="#home">Home</a>
           <a href="./public/2Q1GNaAyuyao.html"> First Exercise . . and Second c: </a>
           <a href="./public/Q21NGNaAyuyao.html"> First Non-Graded ⋆ </a>
+          <a href="./public/bonus.html"> Type - Bonus :o </a>
       </nav>
       </div>
     </section>
