Thirty-fourth Commit

--- a/public/bonus.html
+++ b/public/bonus.html
@@ -56,6 +56,9 @@
             background-color: #e6ebf2;
             border-color: #7b8ba2;
         }
+        footer {
+            color: #7e8ea8;
+        }
     </style>
 
     <body>
@@ -137,4 +140,7 @@
     </script>
     </div>
     </body>
+    <footer>
+    &copy; 2025, Jesh Ayuyao
+    </footer>
 </html>
